combined male and female into same column

--- a/results.ipynb
+++ b/results.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 18:41:54,459; src.utils; INFO; Root logger is set up\n"
+      "2021-02-15 18:52:32,098; src.utils; INFO; Root logger is set up\n"
      ]
     }
    ],
@@ -59,10 +59,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 18:41:54,477; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
-      "2021-02-15 18:41:54,479; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n",
-      "2021-02-15 18:41:54,490; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
-      "2021-02-15 18:41:54,494; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/test_ds_profiling.html``\n"
+      "2021-02-15 18:52:32,119; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/train.csv`` into memory\n",
+      "2021-02-15 18:52:32,121; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/train_ds_profiling.html``\n",
+      "2021-02-15 18:52:32,135; src.preprocessing; INFO; Read dataframe from ``/home/kevinsuedmersen/dev/titanic/data/test.csv`` into memory\n",
+      "2021-02-15 18:52:32,139; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/test_ds_profiling.html``\n"
      ]
     }
    ],
@@ -105,21 +105,21 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "equipped-pharmaceutical",
+   "id": "olive-abuse",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 18:41:54,518; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
-      "2021-02-15 18:41:54,525; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
-      "2021-02-15 18:41:54,530; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
-      "2021-02-15 18:41:54,537; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
-      "2021-02-15 18:41:54,559; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
-      "2021-02-15 18:41:54,583; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
-      "2021-02-15 18:41:54,585; src.preprocessing; INFO; Preprocessing finished\n",
-      "2021-02-15 18:41:54,589; src.preprocessing; INFO; Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Sex_female', 'Sex_male', 'Embarked_C', 'Embarked_Q', 'Embarked_S']\n"
+      "2021-02-15 18:52:32,164; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
+      "2021-02-15 18:52:32,169; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-15 18:52:32,179; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-15 18:52:32,186; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-15 18:52:32,192; src.preprocessing; INFO; Converted column ``Sex`` using the custom mapping ``{'male': 1, 'female': 0}``\n",
+      "2021-02-15 18:52:32,218; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-15 18:52:32,220; src.preprocessing; INFO; Preprocessing finished\n",
+      "2021-02-15 18:52:32,222; src.preprocessing; INFO; Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked_C', 'Embarked_Q', 'Embarked_S']\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
     "}\n",
     "col_name_to_encoding = {\n",
     "    'Pclass': {1: 3, 2: 2, 3: 1}, # original_value: encoding_value\n",
-    "    'Sex': 'one_hot',\n",
+    "    'Sex': {'male': 1, 'female': 0},\n",
     "    'Embarked': 'one_hot'\n",
     "}\n",
     "\n",
@@ -150,14 +150,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 18:41:54,616; src.preprocessing; INFO; The median of column ``Age`` equals: 27.0\n",
-      "2021-02-15 18:41:54,620; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
-      "2021-02-15 18:41:54,629; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
-      "2021-02-15 18:41:54,634; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
-      "2021-02-15 18:41:54,651; src.preprocessing; INFO; One-hot encoded the column ``Sex``\n",
-      "2021-02-15 18:41:54,666; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
-      "2021-02-15 18:41:54,669; src.preprocessing; INFO; Preprocessing finished\n",
-      "2021-02-15 18:41:54,670; src.preprocessing; INFO; Available columns: ['PassengerId', 'Pclass', 'Name', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Sex_female', 'Sex_male', 'Embarked_C', 'Embarked_Q', 'Embarked_S']\n"
+      "2021-02-15 18:52:32,254; src.preprocessing; INFO; The median of column ``Age`` equals: 27.0\n",
+      "2021-02-15 18:52:32,261; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-15 18:52:32,266; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-15 18:52:32,273; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-15 18:52:32,279; src.preprocessing; INFO; Converted column ``Sex`` using the custom mapping ``{'male': 1, 'female': 0}``\n",
+      "2021-02-15 18:52:32,292; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-15 18:52:32,294; src.preprocessing; INFO; Preprocessing finished\n",
+      "2021-02-15 18:52:32,297; src.preprocessing; INFO; Available columns: ['PassengerId', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked_C', 'Embarked_Q', 'Embarked_S']\n"
      ]
     },
     {
@@ -186,8 +186,7 @@
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
        "      <th>Fare</th>\n",
-       "      <th>Sex_female</th>\n",
-       "      <th>Sex_male</th>\n",
+       "      <th>Sex</th>\n",
        "      <th>Embarked_C</th>\n",
        "      <th>Embarked_Q</th>\n",
        "      <th>Embarked_S</th>\n",
@@ -203,7 +202,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>7.2500</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -218,7 +216,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>71.2833</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -233,7 +230,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>7.9250</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -248,7 +244,6 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>53.1000</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -263,7 +258,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>8.0500</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -284,7 +278,6 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>886</th>\n",
@@ -293,7 +286,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>13.0000</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -308,7 +300,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>30.0000</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -323,7 +314,6 @@
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>23.4500</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -338,7 +328,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>30.0000</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -353,7 +342,6 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>7.7500</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
@@ -363,37 +351,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>891 rows × 12 columns</p>\n",
+       "<p>891 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Pclass   Age  SibSp  Parch     Fare  Sex_female  Sex_male  Embarked_C  \\\n",
-       "0         1  22.0      1      0   7.2500           0         1           0   \n",
-       "1         3  38.0      1      0  71.2833           1         0           1   \n",
-       "2         1  26.0      0      0   7.9250           1         0           0   \n",
-       "3         3  35.0      1      0  53.1000           1         0           0   \n",
-       "4         1  35.0      0      0   8.0500           0         1           0   \n",
-       "..      ...   ...    ...    ...      ...         ...       ...         ...   \n",
-       "886       2  27.0      0      0  13.0000           0         1           0   \n",
-       "887       3  19.0      0      0  30.0000           1         0           0   \n",
-       "888       1  28.0      1      2  23.4500           1         0           0   \n",
-       "889       3  26.0      0      0  30.0000           0         1           1   \n",
-       "890       1  32.0      0      0   7.7500           0         1           0   \n",
+       "     Pclass   Age  SibSp  Parch     Fare  Sex  Embarked_C  Embarked_Q  \\\n",
+       "0         1  22.0      1      0   7.2500    1           0           0   \n",
+       "1         3  38.0      1      0  71.2833    0           1           0   \n",
+       "2         1  26.0      0      0   7.9250    0           0           0   \n",
+       "3         3  35.0      1      0  53.1000    0           0           0   \n",
+       "4         1  35.0      0      0   8.0500    1           0           0   \n",
+       "..      ...   ...    ...    ...      ...  ...         ...         ...   \n",
+       "886       2  27.0      0      0  13.0000    1           0           0   \n",
+       "887       3  19.0      0      0  30.0000    0           0           0   \n",
+       "888       1  28.0      1      2  23.4500    0           0           0   \n",
+       "889       3  26.0      0      0  30.0000    1           1           0   \n",
+       "890       1  32.0      0      0   7.7500    1           0           1   \n",
        "\n",
-       "     Embarked_Q  Embarked_S  Survived  PassengerId  \n",
-       "0             0           1         0            1  \n",
-       "1             0           0         1            2  \n",
-       "2             0           1         1            3  \n",
-       "3             0           1         1            4  \n",
-       "4             0           1         0            5  \n",
-       "..          ...         ...       ...          ...  \n",
-       "886           0           1         0          887  \n",
-       "887           0           1         1          888  \n",
-       "888           0           1         0          889  \n",
-       "889           0           0         1          890  \n",
-       "890           1           0         0          891  \n",
+       "     Embarked_S  Survived  PassengerId  \n",
+       "0             1         0            1  \n",
+       "1             0         1            2  \n",
+       "2             1         1            3  \n",
+       "3             1         1            4  \n",
+       "4             1         0            5  \n",
+       "..          ...       ...          ...  \n",
+       "886           1         0          887  \n",
+       "887           1         1          888  \n",
+       "888           1         0          889  \n",
+       "889           0         1          890  \n",
+       "890           0         0          891  \n",
        "\n",
-       "[891 rows x 12 columns]"
+       "[891 rows x 11 columns]"
       ]
      },
      "metadata": {},
@@ -407,8 +395,7 @@
     "    'SibSp', \n",
     "    'Parch', \n",
     "    'Fare', \n",
-    "    'Sex_female', \n",
-    "    'Sex_male', \n",
+    "    'Sex', \n",
     "    'Embarked_C', \n",
     "    'Embarked_Q', \n",
     "    'Embarked_S'\n",
@@ -433,14 +420,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 18:41:54,716; src.training; INFO; Training ``svm`` started\n",
-      "2021-02-15 18:41:54,725; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-15 18:41:54,744; src.training; INFO; Training finished\n",
-      "2021-02-15 18:41:54,755; src.training; INFO; Results on the validation set: accuracy 0.7985074626865671, precision 0.8607594936708861, recall 0.6126126126126126, f1 0.7157894736842104\n",
-      "2021-02-15 18:41:54,759; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
-      "2021-02-15 18:41:54,770; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-15 18:41:54,773; src.training; INFO; Generating predictions on the test set\n",
-      "2021-02-15 18:41:54,790; src.training; INFO; Saved submission to ``results/submission.csv``\n"
+      "2021-02-15 18:52:32,343; src.training; INFO; Training ``svm`` started\n",
+      "2021-02-15 18:52:32,352; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-15 18:52:32,372; src.training; INFO; Training finished\n",
+      "2021-02-15 18:52:32,382; src.training; INFO; Results on the validation set: accuracy 0.7985074626865671, precision 0.8607594936708861, recall 0.6126126126126126, f1 0.7157894736842104\n",
+      "2021-02-15 18:52:32,385; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
+      "2021-02-15 18:52:32,394; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-15 18:52:32,398; src.training; INFO; Generating predictions on the test set\n",
+      "2021-02-15 18:52:32,414; src.training; INFO; Saved submission to ``results/submission.csv``\n"
      ]
     }
    ],
