displaying already generated pandas profiling report as IFrame

--- a/results.ipynb
+++ b/results.ipynb
@@ -19,7 +19,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 22:37:37,261; src.utils; INFO; Root logger is set up\n"
+      "2021-02-16 18:11:22,916; src.utils; INFO; Root logger is set up\n"
      ]
     }
    ],
@@ -50,21 +50,39 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "voluntary-promise",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "retired-spending",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 22:37:37,276; src.preprocessing; INFO; Train samples: \"891\"\n",
-      "2021-02-15 22:37:37,289; src.preprocessing; INFO; Test samples: \"418\"\n",
-      "2021-02-15 22:37:37,304; src.preprocessing; INFO; Total samples: \"1309\"\n",
-      "2021-02-15 22:37:37,305; src.preprocessing; INFO; Joined train and test sets together for the preprocessing. For training and testing, they will be separated again\n",
-      "2021-02-15 22:37:37,306; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/ds_profile_report.html``\n"
+      "2021-02-16 18:11:22,933; src.preprocessing; INFO; Train samples: \"891\"\n",
+      "2021-02-16 18:11:22,940; src.preprocessing; INFO; Test samples: \"418\"\n",
+      "2021-02-16 18:11:22,958; src.preprocessing; INFO; Total samples: \"1309\"\n",
+      "2021-02-16 18:11:22,960; src.preprocessing; INFO; Joined train and test sets together for the preprocessing. For training and testing, they will be separated again\n",
+      "2021-02-16 18:11:22,961; src.preprocessing; INFO; A profiling report was already generated and is located at ``results/ds_profile_report.html``\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1000\"\n",
+       "            height=\"1000\"\n",
+       "            src=\"results/ds_profile_report.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f63ac86beb0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -119,14 +137,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 22:37:37,321; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
-      "2021-02-15 22:37:37,325; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
-      "2021-02-15 22:37:37,329; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
-      "2021-02-15 22:37:37,332; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
-      "2021-02-15 22:37:37,335; src.preprocessing; INFO; Converted column ``Sex`` using the custom mapping ``{'male': 1, 'female': 0}``\n",
-      "2021-02-15 22:37:37,341; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
-      "2021-02-15 22:37:37,342; src.preprocessing; INFO; Preprocessing finished\n",
-      "2021-02-15 22:37:37,344; src.preprocessing; INFO; Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked', 'Embarked_C', 'Embarked_Q', 'Embarked_S']\n"
+      "2021-02-16 18:11:23,007; src.preprocessing; INFO; The median of column ``Age`` equals: 28.0\n",
+      "2021-02-16 18:11:23,013; src.preprocessing; INFO; The mode of column ``Embarked`` equals: S\n",
+      "2021-02-16 18:11:23,020; src.preprocessing; INFO; The median of column ``Fare`` equals: 14.4542\n",
+      "2021-02-16 18:11:23,032; src.preprocessing; INFO; Converted column ``Pclass`` using the custom mapping ``{1: 3, 2: 2, 3: 1}``\n",
+      "2021-02-16 18:11:23,041; src.preprocessing; INFO; Converted column ``Sex`` using the custom mapping ``{'male': 1, 'female': 0}``\n",
+      "2021-02-16 18:11:23,061; src.preprocessing; INFO; One-hot encoded the column ``Embarked``\n",
+      "2021-02-16 18:11:23,062; src.preprocessing; INFO; Preprocessing finished\n",
+      "2021-02-16 18:11:23,068; src.preprocessing; INFO; Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked', 'Embarked_C', 'Embarked_Q', 'Embarked_S']\n"
      ]
     },
     {
@@ -360,14 +378,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 22:37:37,404; src.training; INFO; Training ``svm`` started\n",
-      "2021-02-15 22:37:37,410; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-15 22:37:37,427; src.training; INFO; Training finished\n",
-      "2021-02-15 22:37:37,440; src.training; INFO; Results on the validation set: accuracy 0.80, precision 0.86, recall 0.61, f1 0.72\n",
-      "2021-02-15 22:37:37,442; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
-      "2021-02-15 22:37:37,451; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-15 22:37:37,453; src.training; INFO; Generating predictions on the test set\n",
-      "2021-02-15 22:37:37,469; src.training; INFO; Saved submission to ``results/basic_preprocessing_submission.csv``\n"
+      "2021-02-16 18:11:23,125; src.training; INFO; Training ``svm`` started\n",
+      "2021-02-16 18:11:23,129; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-16 18:11:23,148; src.training; INFO; Training finished\n",
+      "2021-02-16 18:11:23,158; src.training; INFO; Results on the validation set: accuracy 0.80, precision 0.86, recall 0.61, f1 0.72\n",
+      "2021-02-16 18:11:23,159; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
+      "2021-02-16 18:11:23,164; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-16 18:11:23,166; src.training; INFO; Generating predictions on the test set\n",
+      "2021-02-16 18:11:23,177; src.training; INFO; Saved submission to ``results/basic_preprocessing_submission.csv``\n"
      ]
     }
    ],
@@ -437,7 +455,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 22:37:37,550; src.preprocessing; INFO; Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked', 'Embarked_C', 'Embarked_Q', 'Embarked_S', 'name_len', 'family_size', 'has_cabin', 'is_alone', 'fare_category', 'age_category', 'title', 'title_capt', 'title_col', 'title_countess', 'title_don', 'title_dona', 'title_dr', 'title_jonkheer', 'title_lady', 'title_major', 'title_master', 'title_miss', 'title_mlle', 'title_mme', 'title_mr', 'title_mrs', 'title_ms', 'title_rev', 'title_sir']\n"
+      "2021-02-16 18:11:23,223; src.preprocessing; INFO; Available columns: ['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp', 'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked', 'Embarked_C', 'Embarked_Q', 'Embarked_S', 'name_len', 'family_size', 'has_cabin', 'is_alone', 'fare_category', 'age_category', 'title', 'title_capt', 'title_col', 'title_countess', 'title_don', 'title_dona', 'title_dr', 'title_jonkheer', 'title_lady', 'title_major', 'title_master', 'title_miss', 'title_mlle', 'title_mme', 'title_mr', 'title_mrs', 'title_ms', 'title_rev', 'title_sir']\n"
      ]
     },
     {
@@ -817,14 +835,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-15 22:37:37,577; src.training; INFO; Training ``svm`` started\n",
-      "2021-02-15 22:37:37,581; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-15 22:37:37,597; src.training; INFO; Training finished\n",
-      "2021-02-15 22:37:37,607; src.training; INFO; Results on the validation set: accuracy 0.82, precision 0.85, recall 0.68, f1 0.76\n",
-      "2021-02-15 22:37:37,609; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
-      "2021-02-15 22:37:37,613; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
-      "2021-02-15 22:37:37,614; src.training; INFO; Generating predictions on the test set\n",
-      "2021-02-15 22:37:37,630; src.training; INFO; Saved submission to ``results/advanced_preprocessing_submission.csv``\n"
+      "2021-02-16 18:11:23,278; src.training; INFO; Training ``svm`` started\n",
+      "2021-02-16 18:11:23,286; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-16 18:11:23,308; src.training; INFO; Training finished\n",
+      "2021-02-16 18:11:23,318; src.training; INFO; Results on the validation set: accuracy 0.82, precision 0.85, recall 0.68, f1 0.76\n",
+      "2021-02-16 18:11:23,320; src.training; INFO; Saved the trained model to ``results/svm_model.pickle``\n",
+      "2021-02-16 18:11:23,324; src.training; INFO; Saved the trained model to ``results/min_max_scaler.pickle``\n",
+      "2021-02-16 18:11:23,325; src.training; INFO; Generating predictions on the test set\n",
+      "2021-02-16 18:11:23,339; src.training; INFO; Saved submission to ``results/advanced_preprocessing_submission.csv``\n"
      ]
     }
    ],
@@ -878,7 +896,7 @@
    "source": [
     "## TODO: \n",
     "- Explain used model\n",
-    "- Extract information from the `Ticket` column\n",
+    "- Extract numbers and letters from the `Ticket` column\n",
     "- Precision recall Plot\n",
     "- Confusion matrix\n",
     "- Update docstrings"
