extracted name info

--- a/results.ipynb
+++ b/results.ipynb
@@ -897,6 +897,7 @@
     "## TODO: \n",
     "- Explain used model\n",
     "- Extract numbers and letters from the `Ticket` column\n",
+    "- Use Random Forest Model\n",
     "- Precision recall Plot\n",
     "- Confusion matrix\n",
     "- Update docstrings"
