wrote ml pipeline class

--- a/results.ipynb
+++ b/results.ipynb
@@ -897,7 +897,9 @@
     "## TODO: \n",
     "- Explain used model\n",
     "- Extract numbers and letters from the `Ticket` column\n",
+    "- Use Decision Tree Model\n",
     "- Use Random Forest Model\n",
+    "- Simple meta modelling\n",
     "- Precision recall Plot\n",
     "- Confusion matrix\n",
     "- Update docstrings"
