--- a/results.ipynb
+++ b/results.ipynb
@@ -24,14 +24,7 @@
     }
    ],
    "source": [
-    "import logging\n",
-    "from src.preprocessing import Dataset\n",
-    "from src.training import Model\n",
-    "from src.utils import set_root_logger\n",
-    "from IPython.display import display, HTML\n",
-    "\n",
-    "logger = logging.getLogger(__name__)\n",
-    "set_root_logger()"
+    "from src.pipeline import MLPipeline"
    ]
   },
   {
@@ -86,14 +79,34 @@
     }
    ],
    "source": [
-    "# Exploratory data analysis\n",
-    "ds = Dataset(\n",
-    "    df_path_train='/home/kevinsuedmersen/dev/titanic/data/train.csv',\n",
-    "    df_path_test='/home/kevinsuedmersen/dev/titanic/data/test.csv',\n",
-    "    id_col='PassengerId',\n",
-    "    ground_truth='Survived'\n",
+    "# Setup\n",
+    "MISSING_VALUE_CONFIG = {\n",
+    "    'Age': 'median', \n",
+    "    'Embarked': 'mode',\n",
+    "    'Fare': 'median'\n",
+    "}\n",
+    "ENCODING_CONFIG = {\n",
+    "    'Pclass': {1: 3, 2: 2, 3: 1}, # original_value: encoding_value\n",
+    "    'Sex': {'male': 1, 'female': 0},\n",
+    "    'Embarked': 'one_hot'\n",
+    "}\n",
+    "\n",
+    "MODEL_CONFIG = {\n",
+    "    'svm': {'kernel': 'rbf'},\n",
+    "    'decision_tree': {},\n",
+    "    'random_forest': {}\n",
+    "}\n",
+    "ml_pipeline = MLPipeline(\n",
+    "    df_path_train='data/train.csv', \n",
+    "    df_path_test='data/test.csv', \n",
+    "    id_col='PassengerId', \n",
+    "    ground_truth='Survived', \n",
+    "    missing_value_config=MISSING_VALUE_CONFIG, \n",
+    "    encoding_config=ENCODING_CONFIG, \n",
+    "    model_config=MODEL_CONFIG\n",
     ")\n",
-    "ds.profile(title='ds_profile_report', html_path='results/ds_profile_report.html')"
+    "\n",
+    "ml_pipeline.run_eda()"
    ]
   },
   {
