--- a/results.ipynb
+++ b/results.ipynb
@@ -100,10 +100,10 @@
     "- Label-encode `Pclass` such that class 1 (for the rich and famous people) has the highest value and class 3 (for working class people) has the lowest value\n",
     "- One-hot encode the following categorical variables: `Sex, Embarked`\n",
     "- Use the following models with default parameters\n",
-    "    - Support Vector Machines\n",
-    "    - Decision Tree\n",
-    "    - Random Forest\n",
-    "- When training the model, min-max scale all features into the range `[0, 1]`"
+    "    - Support Vector Machines (SVM)\n",
+    "    - Decision Tree (DT)\n",
+    "    - Random Forest (RF)\n",
+    "- When training each model, min-max scale all features into the range `[0, 1]`. Whether or not to scale features is dependent on the model, so I put the scaling method into the model config. E.g. the decision tree and random forest are not very sensitive to scaling/not scaling, but if we didn't scale the inputs for the SVM, the results would be considerably worse"
    ]
   },
   {
@@ -643,7 +643,7 @@
     "\n",
     "MODEL_CONFIG = {\n",
     "    'svm': {'kernel': 'rbf', 'scaling_mode': 'min_max'},\n",
-    "    'decision_tree': {'scaling_mode': 'min_max'},\n",
+    "    'decision_tree': {'scaling_mode': None},\n",
     "    'random_forest': {'scaling_mode': 'min_max'},\n",
     "}\n",
     "\n",
@@ -662,8 +662,17 @@
    "metadata": {},
    "source": [
     "### Results iteration 1\n",
-    "- Results on the validation set: accuracy 0.80, precision 0.86, recall 0.61, f1 0.72\n",
-    "- After uploading our submission file `results/basic_prepreprocessing_submission.csv` to kaggle, the result on the test set was an accuracy score of `0.77751`"
+    "- SVM\n",
+    "    - Results on the validation set: accuracy 0.80, precision 0.86, recall 0.61, f1 0.72\n",
+    "    - Results on the kaggle test set: XXX\n",
+    "- DT\n",
+    "    - Results on the validation set: accuracy 0.75, precision 0.69, recall 0.71, f1 0.70\n",
+    "    - Results on the kaggle test set: XXX\n",
+    "- RF\n",
+    "    - Results on the validation set: accuracy 0.78, precision 0.74, recall 0.71, f1 0.72\n",
+    "    - Results on the kaggle test set: XXX\n",
+    "\n",
+    "Note: Model performances may vary slightly with each run due to a little bit of randomness in the model training process"
    ]
   },
   {
@@ -673,7 +682,11 @@
    "source": [
     "## Iteration 2\n",
     "- Build upon iteration 1\n",
-    "- Use feature engineering ideas from https://www.kaggle.com/imoore/titanic-the-only-notebook-you-need-to-see"
+    "- Extract the title from the `Name` column\n",
+    "- Extract more information from the `Ticket` column\n",
+    "- Generate continuous variables, e.g. `family_size`\n",
+    "- Generate indicator variables, e.g. `has_cabin`, `is_along`\n",
+    "- Bin continuous variables, e.g. `fare_category`, `age_category`"
    ]
   },
   {
@@ -1525,19 +1538,18 @@
    "metadata": {},
    "source": [
     "### Results iteration 2\n",
-    "- Results on the validation set: accuracy 0.82, precision 0.85, recall 0.68, f1 0.76\n",
-    "- After uploaded the `results/advanced_preprocessing_submission.csv` file to kaggle, the accuracy on the test set was `0.77751`\n",
-    "- While the results on the validation set slightly improved, astonishingly, the test set score remained exactly the same. I made sure that `results/basic_preprocessing_submission.csv` and `results/advanced_preprocessing_submission.csv` actually contain different values, so this mus have happened by chance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "declared-nicholas",
-   "metadata": {},
-   "source": [
-    "## Iteration 3\n",
-    "- Build upon iteration 2\n",
-    "- Use hyper-parameter tuning to find optimal values for `C, gamma`"
+    "### Results iteration 1\n",
+    "- SVM\n",
+    "    - Results on the validation set: accuracy 0.83, precision 0.84, recall 0.72, f1 0.78\n",
+    "    - Results on the kaggle test set: XXX\n",
+    "- DT\n",
+    "    - Results on the validation set: accuracy 0.78, precision 0.75, recall 0.70, f1 0.73\n",
+    "    - Results on the kaggle test set: XXX\n",
+    "- RF\n",
+    "    - Results on the validation set: accuracy 0.82, precision 0.84, recall 0.71, f1 0.77\n",
+    "    - Results on the kaggle test set: XXX\n",
+    "    \n",
+    "Note: Model performances may vary slightly with each run due to a little bit of randomness in the model training process"
    ]
   },
   {
