updated results in notebook

--- a/results.ipynb
+++ b/results.ipynb
@@ -664,13 +664,13 @@
     "### Results iteration 1\n",
     "- SVM\n",
     "    - Results on the validation set: accuracy 0.80, precision 0.86, recall 0.61, f1 0.72\n",
-    "    - Results on the kaggle test set: XXX\n",
+    "    - Results on the kaggle test set: 0.77751\n",
     "- DT\n",
     "    - Results on the validation set: accuracy 0.75, precision 0.69, recall 0.71, f1 0.70\n",
-    "    - Results on the kaggle test set: XXX\n",
+    "    - Results on the kaggle test set: 0.74880\n",
     "- RF\n",
     "    - Results on the validation set: accuracy 0.78, precision 0.74, recall 0.71, f1 0.72\n",
-    "    - Results on the kaggle test set: XXX\n",
+    "    - Results on the kaggle test set: 0.77511\n",
     "\n",
     "Note: Model performances may vary slightly with each run due to a little bit of randomness in the model training process"
    ]
@@ -1538,18 +1538,26 @@
    "metadata": {},
    "source": [
     "### Results iteration 2\n",
-    "### Results iteration 1\n",
     "- SVM\n",
     "    - Results on the validation set: accuracy 0.83, precision 0.84, recall 0.72, f1 0.78\n",
-    "    - Results on the kaggle test set: XXX\n",
+    "    - Results on the kaggle test set: 0.78947\n",
     "- DT\n",
     "    - Results on the validation set: accuracy 0.78, precision 0.75, recall 0.70, f1 0.73\n",
-    "    - Results on the kaggle test set: XXX\n",
+    "    - Results on the kaggle test set: 0.75598\n",
     "- RF\n",
     "    - Results on the validation set: accuracy 0.82, precision 0.84, recall 0.71, f1 0.77\n",
-    "    - Results on the kaggle test set: XXX\n",
+    "    - Results on the kaggle test set: 0.78708\n",
     "    \n",
     "Note: Model performances may vary slightly with each run due to a little bit of randomness in the model training process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "formed-pursuit",
+   "metadata": {},
+   "source": [
+    "## Iteration 3\n",
+    "On top of iteration 2, I also experimented with hyper-parameter tuning of each model individually, but since I didn't see any significantly better results, I will not re-compute the results here again, because hyper-parameter tuning using grid seach takes a considerablt amount of time"
    ]
   },
   {
@@ -1558,13 +1566,7 @@
    "metadata": {},
    "source": [
     "## TODO: \n",
-    "- Explain used model\n",
-    "- Extract numbers and letters from the `Ticket` column\n",
-    "- Use Decision Tree Model\n",
-    "- Use Random Forest Model\n",
-    "- Simple meta modelling\n",
-    "- Precision recall Plot\n",
-    "- Confusion matrix\n",
+    "- Explain used models\n",
     "- Update docstrings"
    ]
   }
