adjusted todo cell

--- a/results.ipynb
+++ b/results.ipynb
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formed-pursuit",
+   "id": "excellent-lingerie",
    "metadata": {},
    "source": [
     "## Iteration 3\n",
@@ -1566,8 +1566,7 @@
    "metadata": {},
    "source": [
     "## TODO: \n",
-    "- Explain used models\n",
-    "- Update docstrings"
+    "- Explain used models"
    ]
   }
  ],
