added model explanation

--- a/results.ipynb
+++ b/results.ipynb
@@ -27334,7 +27334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attractive-conservation",
+   "id": "atlantic-growth",
    "metadata": {},
    "source": [
     "## Models\n",
@@ -27349,7 +27349,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "angry-stack",
+   "id": "played-service",
    "metadata": {},
    "outputs": [
     {
@@ -27370,16 +27370,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "played-northwest",
+   "id": "refined-university",
    "metadata": {},
    "source": [
-    "where each color represents data from a different category. Clearly, the data isn't linearly separably in the input space, but imaging, we could transform the 2 dimensional input space into a 3 dimensional feature space which might take the following form,"
+    "where each color represents data from a different category. Clearly, the data isn't linearly separably in the input space, but imagine, we could transform the 2 dimensional input space into a 3 dimensional feature space which might take the following form,"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "funded-deputy",
+   "id": "accessory-three",
    "metadata": {},
    "outputs": [
     {
@@ -27400,16 +27400,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "military-kelly",
+   "id": "located-chrome",
    "metadata": {},
    "source": [
-    "Where the blue feature vectors are supposed to be located direclty \"above\" the red feature vectors and where the green plane is supposed to indicate that we separate the data by \"slicing\" horizontally through the feature space.\n",
+    "Where the blue feature vectors are supposed to be located directly \"above\" the red feature vectors and where the green plane is supposed to indicate that we separate the data by \"slicing\" horizontally through the feature space.\n",
     "\n",
     "The above idea has actually been formalized by Vapnik & Chervonenkis (VC). VC state that N input data vectors can always be perfectly linearly separated, i.e. \"shattered\", if the input data space has N-1 dimensions. So a good strategy would be to transform the input data space into an at least N-1 dimensional feature space and then fit a linear discriminant function in that N-1 dimensional feature space. \n",
     "\n",
     "Apart from possible overfitting when perfectly separating the training data, there is also a computational constraint to this idea, because the dimensionality of the feature space (M) may sometimes be much higher than N. When using the radial basis function (RBF) kernel, the feature space is even infinitely large, which is totally impractical when done explicitly. Luckily though, this computational constraint can be solved with the so called kernel-trick, which allows us to skip the explicit transformation into the enlarged feature space by applying well defined kernel functions. One property that all these kernel functions must satisfy is $k(\\textbf{x}, \\textbf{x}') = \\phi(\\textbf{x})^T \\phi(\\textbf{x}')$, i.e. result of the kernel function must be equal to the dot product of the feature vectors.\n",
     "\n",
-    "So, then after applying the kernel trick, the training duration only scales with N, and not with M anymore, which is only practical, if M >> N and if N is relatively small. The titanic dataset is relatively small, so SVM shouldn't train for too long."
+    "So, then after applying the kernel trick, the training duration only scales with N, and not with M anymore, which is only practical, if M >> N and if N is relatively small. The titanic dataset is relatively small, so SVM shouldn't train for too long.\n",
+    "\n",
+    "Besides SVM, I also want to use the good old decision tree which separates the input space into non-overlapping, mutually exclusive regions. When a new input vector is supposed to be classified, it is first checked into which \"leaf\", i.e. terminal node, of the tree this vector falls, and then it will be assigned to the category which is represented by the majority of the other input vectors in that leaf. Ties may need to be handled by random assignment. When fitting a decision tree, one needs to make sure that the tree is not too deep, because otherwise, it is very likely to overfit.\n",
+    "\n",
+    "The random forest estimator is an extension to decision trees by using a seemingly odd trick. Multiple, very deep, trees are fit to the training data, but when deciding on a feature which to use for the next split, only a random subset of the features may be considered. This has the effect that each individual tree is totally overfitting the training data, but is very different from the other trees. Combining all individual trees in an ensemble of trees reduces the high variance of each individual tree and therefore generalizes quite well to unseen test data. \n",
+    "\n",
+    "In what follows, I will conduct three iterations which all build on each other and become more and more complex. "
    ]
   },
   {
@@ -28887,7 +28893,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "vital-completion",
+   "id": "discrete-leeds",
    "metadata": {},
    "outputs": [
     {
@@ -29788,7 +29794,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "south-invasion",
+   "id": "right-embassy",
    "metadata": {},
    "source": [
     "### Results iteration 3\n",
